--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,5 @@
 - Add script to fetch TianoCore OVMF firmware images instead of using provided
 - Each arch uses config file instead of seperate GNUmakefile?
-- Load kernel!
-- Pass and retrieve memory map
 - Higher-half kernel with paging (exit boot services and construct page tables)
-- Load all segments and sections
-- Load kernel stub with physical address, by allocating pages at it
-- Fix obscure GCC optimisation bug
-- Allocate font
+- Paging!
+- RB tree allocator free memory
